--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
+    "@nestjs/config": "^1.1.6",
     "@nestjs/core": "^8.0.0",
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.1.0",
@@ -30,7 +31,7 @@
     "@nestjs/typeorm": "^8.0.3",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.2",
-    "dotenv": "^14.2.0",
+    "dotenv": "^16.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "passport-jwt": "^4.0.0",
