--- a/package.json
+++ b/package.json
@@ -31,15 +31,19 @@
     "@nestjs/typeorm": "^8.0.3",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.2",
+    "date-utils": "^1.2.21",
     "dotenv": "^16.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "nest-winston": "^1.6.2",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "swagger-ui-express": "^4.3.0",
-    "typeorm": "^0.2.41"
+    "typeorm": "^0.2.41",
+    "winston": "^3.5.1",
+    "winston-daily-rotate-file": "^4.6.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
